# docs/swagger.yaml
@@ -116,6 +116,27 @@ paths:
       summary: Create a room
       tags:
       - Room
+  /room/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Find one room
+      parameters:
+      - description: Room ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/presenter.RoomResponse'
+      summary: Find one room
+      tags:
+      - Room
   /room/join:
     post:
       consumes:
